// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Binary PRISMA_QUERY_ENGINE_BINARY, uses supplied binary: ./node_modules/.prisma/client @ 0 - env 1`] = `
Array [
  "index-browser.js",
  "index.d.ts",
  "index.js",
  "package.json",
  "query-engine-darwin",
  "schema.prisma",
]
`;

exports[`Binary PRISMA_QUERY_ENGINE_BINARY, uses supplied binary: ./node_modules/@prisma/engines 1`] = `
Array [
  "README.md",
  "dist",
  "download",
  "introspection-engine-darwin",
  "migration-engine-darwin",
  "package.json",
  "prisma-fmt-darwin",
]
`;

exports[`Binary PRISMA_QUERY_ENGINE_BINARY, uses supplied binary: ./node_modules/prisma 1`] = `
Array [
  "LICENSE",
  "README.md",
  "build",
  "install",
  "package.json",
  "preinstall",
  "prisma-client",
  "scripts",
]
`;

exports[`Binary PRISMA_QUERY_ENGINE_BINARY, uses supplied binary: version output @ 0 - env 1`] = `
"prisma                : placeholder 
@prisma/client        : placeholder 
Current platform      : placeholder 
Query Engine          : placeholder (at custom-engines/binary/Darwin/query-engine-darwin, resolved by PRISMA_QUERY_ENGINE_BINARY)
Migration Engine      : placeholder (at node_modules/@prisma/engines/migration-engine-darwin)
Introspection Engine  : placeholder (at node_modules/@prisma/engines/introspection-engine-darwin)
Format Binary         : placeholder (at node_modules/@prisma/engines/prisma-fmt-darwin)
Default Engines Hash  : placeholder 
Studio                : placeholder "
`;

exports[`Binary PRISMA_QUERY_ENGINE_LIBRARY (!), uses default binary (and ignores env var): ./node_modules/.prisma/client @ 0 - env 1`] = `
Array [
  "index-browser.js",
  "index.d.ts",
  "index.js",
  "package.json",
  "query-engine-darwin",
  "schema.prisma",
]
`;

exports[`Binary PRISMA_QUERY_ENGINE_LIBRARY (!), uses default binary (and ignores env var): ./node_modules/@prisma/engines 1`] = `
Array [
  "README.md",
  "dist",
  "download",
  "introspection-engine-darwin",
  "migration-engine-darwin",
  "package.json",
  "prisma-fmt-darwin",
  "query-engine-darwin",
]
`;

exports[`Binary PRISMA_QUERY_ENGINE_LIBRARY (!), uses default binary (and ignores env var): ./node_modules/prisma 1`] = `
Array [
  "LICENSE",
  "README.md",
  "build",
  "install",
  "package.json",
  "preinstall",
  "prisma-client",
  "query-engine-darwin",
  "scripts",
]
`;

exports[`Binary PRISMA_QUERY_ENGINE_LIBRARY (!), uses default binary (and ignores env var): version output @ 0 - env 1`] = `
"prisma                : placeholder 
@prisma/client        : placeholder 
Current platform      : placeholder 
Query Engine          : placeholder (at node_modules/@prisma/engines/query-engine-darwin)
Migration Engine      : placeholder (at node_modules/@prisma/engines/migration-engine-darwin)
Introspection Engine  : placeholder (at node_modules/@prisma/engines/introspection-engine-darwin)
Format Binary         : placeholder (at node_modules/@prisma/engines/prisma-fmt-darwin)
Default Engines Hash  : placeholder 
Studio                : placeholder "
`;

exports[`Binary no options, uses default binary: ./node_modules/.prisma/client @ 0 - env 1`] = `
Array [
  "index-browser.js",
  "index.d.ts",
  "index.js",
  "package.json",
  "query-engine-darwin",
  "schema.prisma",
]
`;

exports[`Binary no options, uses default binary: ./node_modules/@prisma/engines 1`] = `
Array [
  "README.md",
  "dist",
  "download",
  "introspection-engine-darwin",
  "migration-engine-darwin",
  "package.json",
  "prisma-fmt-darwin",
  "query-engine-darwin",
]
`;

exports[`Binary no options, uses default binary: ./node_modules/prisma 1`] = `
Array [
  "LICENSE",
  "README.md",
  "build",
  "install",
  "package.json",
  "preinstall",
  "prisma-client",
  "query-engine-darwin",
  "scripts",
]
`;

exports[`Binary no options, uses default binary: version output @ 0 - env 1`] = `
"prisma                : placeholder 
@prisma/client        : placeholder 
Current platform      : placeholder 
Query Engine          : placeholder (at node_modules/@prisma/engines/query-engine-darwin)
Migration Engine      : placeholder (at node_modules/@prisma/engines/migration-engine-darwin)
Introspection Engine  : placeholder (at node_modules/@prisma/engines/introspection-engine-darwin)
Format Binary         : placeholder (at node_modules/@prisma/engines/prisma-fmt-darwin)
Default Engines Hash  : placeholder 
Studio                : placeholder "
`;
